@@ -1,5 +1,6 @@
 require 'fileutils'
 require 'tmpdir'
+require 'zlib'
 
 require 'rubygems'
 require 'rubygems/format'
@@ -99,10 +100,10 @@ class Gem::Indexer
       yaml_name = File.join @quick_dir, spec_file_name
       marshal_name = File.join @quick_marshal_dir, spec_file_name
 
-      yaml_zipped = deflate spec.to_yaml
+      yaml_zipped = Gem.deflate spec.to_yaml
       open yaml_name, 'wb' do |io| io.write yaml_zipped end
 
-      marshal_zipped = deflate Marshal.dump(spec)
+      marshal_zipped = Gem.deflate Marshal.dump(spec)
       open marshal_name, 'wb' do |io| io.write marshal_zipped end
 
       progress.updated original_name
@@ -264,18 +265,11 @@ class Gem::Indexer
   def compress(filename, extension)
     data = Gem.read_binary filename
 
-    zipped = deflate data
+    zipped = Gem.deflate data
 
     open "#{filename}.#{extension}", 'wb' do |io|
       io.write zipped
     end
-  end
-
-  ##
-  # Zlib::Deflate.deflate wrapper
-
-  def deflate(string)
-    Zlib::Deflate.deflate string
   end
 
   ##
@@ -301,20 +295,13 @@ class Gem::Indexer
     FileUtils.rm_rf @directory
   end
 
-  ##
-  # Zlib::GzipWriter wrapper
+   ##
+  # Zlib::GzipWriter wrapper that gzips +filename+ on disk.
 
   def gzip(filename)
     Zlib::GzipWriter.open "#{filename}.gz" do |io|
       io.write Gem.read_binary(filename)
     end
-  end
-
-  ##
-  # Zlib::Inflate.inflate wrapper
-
-  def inflate(string)
-    Zlib::Inflate.inflate string
   end
 
   ##
@@ -341,7 +328,7 @@ class Gem::Indexer
     data = Gem.read_binary path
     compressed_data = Gem.read_binary "#{path}.#{extension}"
 
-    unless data == inflate(compressed_data) then
+    unless data == Gem.inflate(compressed_data) then
       raise "Compressed file #{compressed_path} does not match uncompressed file #{path}"
     end
   end
