@@ -14,10 +14,24 @@ class TestGemServer < RubyGemTestCase
     super
 
     @a1 = quick_gem 'a', '1'
+    @a2 = quick_gem 'a', '2'
 
     @server = Gem::Server.new Gem.dir, process_based_port, false
     @req = WEBrick::HTTPRequest.new :Logger => nil
     @res = WEBrick::HTTPResponse.new :HTTPVersion => '1.0'
+  end
+
+  def test_latest_specs
+    data = StringIO.new "GET /latest_specs.#{Gem.marshal_version}.gz HTTP/1.0\r\n\r\n"
+    @req.parse data
+
+    @server.latest_specs @req, @res
+
+    assert_equal 200, @res.status, @res.body
+    assert_match %r| \d\d:\d\d:\d\d |, @res['date']
+    assert_equal 'application/x-gzip', @res['content-type']
+    assert_equal [['a', Gem::Version.new(2), Gem::Platform::RUBY]],
+                 Marshal.load(Gem.gunzip(@res.body))
   end
 
   def test_quick_index
@@ -29,7 +43,7 @@ class TestGemServer < RubyGemTestCase
     assert_equal 200, @res.status, @res.body
     assert_match %r| \d\d:\d\d:\d\d |, @res['date']
     assert_equal 'text/plain', @res['content-type']
-    assert_equal "a-1", @res.body
+    assert_equal "a-1\na-2", @res.body
   end
 
   def test_quick_index_rz
@@ -41,7 +55,7 @@ class TestGemServer < RubyGemTestCase
     assert_equal 200, @res.status, @res.body
     assert_match %r| \d\d:\d\d:\d\d |, @res['date']
     assert_equal 'text/plain', @res['content-type']
-    assert_equal "a-1", Zlib::Inflate.inflate(@res.body)
+    assert_equal "a-1\na-2", Gem.inflate(@res.body)
   end
 
   def test_quick_a_1_gemspec_rz
@@ -54,7 +68,7 @@ class TestGemServer < RubyGemTestCase
     assert @res['date']
     assert_equal 'text/plain', @res['content-type']
 
-    spec = YAML.load Zlib::Inflate.inflate(@res.body)
+    spec = YAML.load Gem.inflate(@res.body)
     assert_equal 'a', spec.name
     assert_equal Gem::Version.new(1), spec.version
   end
@@ -73,7 +87,7 @@ class TestGemServer < RubyGemTestCase
     assert @res['date']
     assert_equal 'text/plain', @res['content-type']
 
-    spec = YAML.load Zlib::Inflate.inflate(@res.body)
+    spec = YAML.load Gem.inflate(@res.body)
     assert_equal 'a', spec.name
     assert_equal Gem::Version.new(1), spec.version
     assert_equal Gem::Platform.local, spec.platform
@@ -93,7 +107,22 @@ class TestGemServer < RubyGemTestCase
     assert @res['date']
     assert_equal 'text/plain', @res['content-type']
 
-    spec = YAML.load Zlib::Inflate.inflate(@res.body)
+    spec = YAML.load Gem.inflate(@res.body)
+    assert_equal 'a', spec.name
+    assert_equal Gem::Version.new(1), spec.version
+  end
+
+  def test_quick_marshal_a_1_gemspec_rz
+    data = StringIO.new "GET /quick/Marshal.#{Gem.marshal_version}/a-1.gemspec.rz HTTP/1.0\r\n\r\n"
+    @req.parse data
+
+    @server.quick @req, @res
+
+    assert_equal 200, @res.status, @res.body
+    assert @res['date']
+    assert_equal 'text/plain', @res['content-type']
+
+    spec = Marshal.load Gem.inflate(@res.body)
     assert_equal 'a', spec.name
     assert_equal Gem::Version.new(1), spec.version
   end
@@ -109,6 +138,21 @@ class TestGemServer < RubyGemTestCase
     assert_equal 'text/plain', @res['content-type']
     assert_equal 'No gems found matching "z" "9" nil', @res.body
     assert_equal 404, @res.status
+  end
+
+  def test_specs
+    data = StringIO.new "GET /specs.#{Gem.marshal_version}.gz HTTP/1.0\r\n\r\n"
+    @req.parse data
+
+    @server.specs @req, @res
+
+    assert_equal 200, @res.status, @res.body
+    assert_match %r| \d\d:\d\d:\d\d |, @res['date']
+    assert_equal 'application/x-gzip', @res['content-type']
+
+    assert_equal [['a', Gem::Version.new(1), Gem::Platform::RUBY],
+                  ['a', Gem::Version.new(2), Gem::Platform::RUBY]],
+                 Marshal.load(Gem.gunzip(@res.body))
   end
 
 end
